# FETFileInter

./: README.md  test.py
package/: __init__.py  pyproject.toml
package/src/FETFileInter/: __init__.py
test/: main.py  test.fet  test.py
