[build-system]
requires = ["flit_core>=3.4"]
build-backend = "flit_core.buildapi"

[project]
name = "FETFileInter"
version = "0.0.1"
authors = [
  { name="Purplexity", email="thepurplexity@gmail.com" },
]
description = "Allows you to interact with FernetEncryptedText files."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/deezed420/FETFileInter"
"Bug Tracker" = "https://github.com/deezed420/FETFileInter/issues"